--- a/package.json
+++ b/package.json
@@ -3,7 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^3.1.0",
+    "@mui/material": "^5.13.6",
+    "@mui/styled-engine-sc": "^5.12.0",
+    "@mui/x-data-grid": "^6.9.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -16,7 +21,7 @@
     "react-router-dom": "^6.12.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
-    "styled-components": "^6.0.0-rc.3",
+    "styled-components": "^6.0.0",
     "web-vitals": "^2.1.4",
     "yup": "^1.2.0"
   },
