--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^3.1.0",
+    "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.6",
     "@mui/styled-engine-sc": "^5.12.0",
     "@mui/x-data-grid": "^6.9.0",
@@ -20,6 +21,7 @@
     "react-hook-form": "^7.44.3",
     "react-router-dom": "^6.12.1",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.3",
     "react-toastify": "^9.1.3",
     "styled-components": "^6.0.0",
     "web-vitals": "^2.1.4",
